// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Fixtures decorators 1`] = `
"[1/4] 🔍  Finding JS and HBS files...
[2/4] 🔍  Searching for translations keys in JS and HBS files...
[3/4] ⚙️   Checking for unused translations...
[4/4] ⚙️   Checking for missing translations...

 👏  No unused translations were found!

 👏  No missing translations were found!
"
`;

exports[`Test Fixtures decorators 2`] = `Map {}`;

exports[`Test Fixtures embedded-conditionals 1`] = `
"[1/4] 🔍  Finding JS and HBS files...
[2/4] 🔍  Searching for translations keys in JS and HBS files...
[3/4] ⚙️   Checking for unused translations...
[4/4] ⚙️   Checking for missing translations...

 👏  No unused translations were found!

 👏  No missing translations were found!
"
`;

exports[`Test Fixtures embedded-conditionals 2`] = `Map {}`;

exports[`Test Fixtures emblem 1`] = `
"[1/4] 🔍  Finding JS and HBS files...
[2/4] 🔍  Searching for translations keys in JS and HBS files...
[3/4] ⚙️   Checking for unused translations...
[4/4] ⚙️   Checking for missing translations...

 👏  No unused translations were found!

 ⚠️   Found 1 missing translations!

   - emblem-translation (used in app/templates/application.emblem)
"
`;

exports[`Test Fixtures emblem 2`] = `Map {}`;

exports[`Test Fixtures in-repo-translations 1`] = `
"[1/4] 🔍  Finding JS and HBS files...
[2/4] 🔍  Searching for translations keys in JS and HBS files...
[3/4] ⚙️   Checking for unused translations...
[4/4] ⚙️   Checking for missing translations...

 ⚠️   Found 1 unused translations!
     You can use --fix to remove all unused translations.

   - in-repo-addon.unused (used in lib/in-repo-addon/translations/en.yaml)

 ⚠️   Found 2 missing translations!

   - translation-missing-in-addon (used in lib/in-repo-addon/addon/templates/addon.hbs)
   - translation-missing-in-app (used in lib/in-repo-addon/app/templates/application.hbs)
"
`;

exports[`Test Fixtures in-repo-translations 2`] = `Map {}`;

exports[`Test Fixtures missing-translations 1`] = `
"[1/4] 🔍  Finding JS and HBS files...
[2/4] 🔍  Searching for translations keys in JS and HBS files...
[3/4] ⚙️   Checking for unused translations...
[4/4] ⚙️   Checking for missing translations...

 👏  No unused translations were found!

 ⚠️   Found 2 missing translations!

   - js-translation (used in app/controllers/application.js)
   - hbs-translation (used in app/templates/application.hbs)
"
`;

exports[`Test Fixtures missing-translations 2`] = `Map {}`;

exports[`Test Fixtures no-issues 1`] = `
"[1/4] 🔍  Finding JS and HBS files...
[2/4] 🔍  Searching for translations keys in JS and HBS files...
[3/4] ⚙️   Checking for unused translations...
[4/4] ⚙️   Checking for missing translations...

 👏  No unused translations were found!

 👏  No missing translations were found!
"
`;

exports[`Test Fixtures no-issues 2`] = `Map {}`;

exports[`Test Fixtures remove-unused-translations 1`] = `
"[1/4] 🔍  Finding JS and HBS files...
[2/4] 🔍  Searching for translations keys in JS and HBS files...
[3/4] ⚙️   Checking for unused translations...
[4/4] ⚙️   Checking for missing translations...

 ⚠️   Found 3 unused translations!

   - foo (used in de.json and en.json)
   - extra (used in de.json)
   - foo.bar.unnested (used in de.json and en.json)

 👏  No missing translations were found!

 👏 All unused translations were removed
"
`;

exports[`Test Fixtures remove-unused-translations 2`] = `
Map {
  "translations/de.json" => "{
  \\"hbs-translation\\": \\"Lenkstage\\",
  \\"js-translation\\": \\"Affentheater\\"
}",
  "translations/en.json" => "{
  \\"hbs-translation\\": \\"HBS!\\",
  \\"js-translation\\": \\"JS!\\"
}",
}
`;

exports[`Test Fixtures remove-unused-translations-nested 1`] = `
"[1/4] 🔍  Finding JS and HBS files...
[2/4] 🔍  Searching for translations keys in JS and HBS files...
[3/4] ⚙️   Checking for unused translations...
[4/4] ⚙️   Checking for missing translations...

 ⚠️   Found 4 unused translations!

   - foo (used in de.json and en.json)
   - extra (used in de.json)
   - parent.child.unusedKey (used in de.json and en.json)
   - unusedParent.unusedChild.unusedKey (used in de.json and en.json)

 👏  No missing translations were found!

 👏 All unused translations were removed
"
`;

exports[`Test Fixtures remove-unused-translations-nested 2`] = `
Map {
  "translations/de.json" => "{
  \\"hbs-translation\\": \\"Lenkstage\\",
  \\"js-translation\\": \\"Affentheater\\",
  \\"parent\\": {
    \\"secondChild\\": \\"usedKey\\"
  }
}",
  "translations/en.json" => "{
  \\"hbs-translation\\": \\"HBS!\\",
  \\"js-translation\\": \\"JS!\\",
  \\"parent\\": {
    \\"secondChild\\": \\"usedKey\\"
  }
}",
}
`;

exports[`Test Fixtures unused-translations 1`] = `
"[1/4] 🔍  Finding JS and HBS files...
[2/4] 🔍  Searching for translations keys in JS and HBS files...
[3/4] ⚙️   Checking for unused translations...
[4/4] ⚙️   Checking for missing translations...

 ⚠️   Found 2 unused translations!
     You can use --fix to remove all unused translations.

   - foo (used in de.json and en.json)
   - extra (used in de.json)

 👏  No missing translations were found!
"
`;

exports[`Test Fixtures unused-translations 2`] = `Map {}`;

exports[`Test Fixtures yaml-translations 1`] = `
"[1/4] 🔍  Finding JS and HBS files...
[2/4] 🔍  Searching for translations keys in JS and HBS files...
[3/4] ⚙️   Checking for unused translations...
[4/4] ⚙️   Checking for missing translations...

 👏  No unused translations were found!

 👏  No missing translations were found!
"
`;

exports[`Test Fixtures yaml-translations 2`] = `Map {}`;
